Fixed a display issue on mobile with naval port, refactor and BWMG section on metal maiden pages

--- a/view/metal_maiden/style.css
+++ b/view/metal_maiden/style.css
@@ -114,7 +114,7 @@ img.tank_req_item {
 }
 
 img.tank_req {
-	height: 150px;
+	max-height: 150px;
 }
 
 .tank_req img.slot {
